--- a/integrations/zendesk/package.json
+++ b/integrations/zendesk/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "axios": "^1.4.0",
