chore: tag engines in all public packages

--- a/packages/chat-client/package.json
+++ b/packages/chat-client/package.json
@@ -41,5 +41,9 @@
     "esbuild-plugin-polyfill-node": "^0.3.0",
     "lodash": "^4.17.21",
     "uuid": "^9.0.0"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "packageManager": "pnpm@8.6.2"
 }
