--- a/packages/zai/package.json
+++ b/packages/zai/package.json
@@ -41,5 +41,9 @@
     "@botpress/client": "0.47.0",
     "@bpinternal/thicktoken": "^1.0.0",
     "@bpinternal/zui": "^0.13.4"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "packageManager": "pnpm@8.6.2"
 }
