chore: deploy plugin production

--- a/.github/workflows/deploy-integrations-production.yml
+++ b/.github/workflows/deploy-integrations-production.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy Plugins
         uses: ./.github/actions/deploy-plugins
         with:
-          environment: 'staging'
+          environment: 'production'
           force: ${{ github.event.inputs.force == 'true' }}
           token_cloud_ops_account: ${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }}
           cloud_ops_workspace_id: ${{ secrets.STAGING_CLOUD_OPS_WORKSPACE_ID }}
