--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "check": "pnpm check:sherif && pnpm check:dep && pnpm check:format && pnpm check:lint && pnpm check:type",
     "fix": "pnpm fix:sherif && pnpm fix:dep && pnpm fix:oxlint && pnpm fix:format && pnpm fix:lint"
   },
+  "lint-staged": {
+    "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx}": [
+      "oxlint -c .oxlintrc.json --fix --fix-suggestions",
+      "prettier --write"
+    ],
+    "**/*.{json,yaml,yml,md}": "prettier --write",
+    "**/*.test.ts": "vitest --run"
+  },
   "devDependencies": {
     "@aws-sdk/client-dynamodb": "^3.564.0",
     "@botpress/cli": "workspace:*",
@@ -40,6 +48,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "oxlint": "^0.15.5",
     "prettier": "^3.4.2",
     "retry-cli": "^0.7.0",
