--- a/.github/workflows/run-zai-tests.yml
+++ b/.github/workflows/run-zai-tests.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Run Zai Tests
         id: 'run-tests'
         run: |
-          bot_id=$(pnpm bp bots new --if-not-exists --json | jq -r ".id")
-          echo "bot_id=$bot_id" >> "$GITHUB_OUTPUT"
+          bot_id=$(pnpm bp bots new --json | jq -r ".id")
+          echo "::set-output name=bot_id::$bot_id"
 
           export CLOUD_API_ENDPOINT='https://api.botpress.dev'
           export CLOUD_BOT_ID=$bot_id
