--- a/.github/workflows/run-zai-tests.yml
+++ b/.github/workflows/run-zai-tests.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - 'packages/zai/**'
+      - '.github/workflows/run-zai-tests.yml'
 
 permissions:
   id-token: write
@@ -34,13 +35,14 @@ jobs:
           bot_id=$(pnpm bp bots new --json | jq -r ".id")
           echo "::set-output name=bot_id::$bot_id"
 
+          exit 1
+
           export CLOUD_API_ENDPOINT='https://api.botpress.dev'
           export CLOUD_BOT_ID=$bot_id
           export CLOUD_PAT=${{ secrets.STAGING_TOKEN_CLOUD_OPS_ACCOUNT }}
           pnpm -F zai run test:e2e
 
-          pnpm bp bots rm $bot_id
       - name: Cleanup
-        if: ${{ failure() }}
+        if: ${{ always() }}
         run: |
           pnpm bp bots rm ${{ steps.run-tests.outputs.bot_id }}
