--- a/.github/actions/deploy-interfaces/action.yml
+++ b/.github/actions/deploy-interfaces/action.yml
@@ -57,10 +57,10 @@ runs:
             base_command="bp deploy -v -y" # all interfaces are public right now            
             if [ $exists -eq 0 ]; then
                 echo -e "\nDeploying interface: ### $interface ###\n"
-                pnpm retry -n 2 -- pnpm -F $interface -c exec -- "$base_command"
+                pnpm retry -n 2 -- pnpm -F "{interfaces/$interface}" -c exec -- "$base_command"
             elif [ $redeploy -eq 1 ]; then
                 echo -e "\nRe-deploying interface: ### $interface ###\n"
-                pnpm retry -n 2 -- pnpm -F $interface -c exec -- "$base_command"
+                pnpm retry -n 2 -- pnpm -F "{interfaces/$interface}" -c exec -- "$base_command"
             else
                 echo -e "\nSkipping interface: ### $interface ###\n"
             fi
