--- a/integrations/zoho/package.json
+++ b/integrations/zoho/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zoho",
-  "integrationName": "Zoho integration for Botpress",
+  "integrationName": "zoho",
   "scripts": {
     "check:type": "tsc --noEmit",
     "check:bplint": "bp lint",
