Revert "fix: making the naming convention match the other integration"
This reverts commit bbfbb19c640eaa48bd76b7369d0ddfdd2f437b1d.

--- a/integrations/zoho/package.json
+++ b/integrations/zoho/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zoho",
-  "integrationName": "zoho",
+  "integrationName": "Zoho integration for Botpress",
   "scripts": {
     "check:type": "tsc --noEmit",
     "check:bplint": "bp lint",
