--- a/integrations/zoho/package.json
+++ b/integrations/zoho/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@botpress/cli": "workspace:*",
     "@types/node": "^18.19.76",
-    "typescript": "^5.7.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
