chore(integrations/zoho): some refactoring

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -60,3 +60,4 @@
 /integrations/whatsapp @SebastienPoitras @botpress/engineering
 /integrations/zapier @SebastienPoitras @botpress/engineering
 /integrations/zendesk @franklevasseur @botpress/engineering
+/integrations/zoho @matthewbotpress @botpress/engineering
