--- a/integrations/bigcommerce-sync/package.json
+++ b/integrations/bigcommerce-sync/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "@bp-templates/empty-integration",
-  "integrationName": "plus/bigcommerce",
+  "name": "@botpresshub/bigcommerce",
+  "integrationName": "bigcommerce",
   "scripts": {
     "check:type": "tsc --noEmit"
   },
   "private": true,
   "dependencies": {
-    "@botpress/client": "0.47.0",
-    "@botpress/sdk": "3.4.0"
+    "@botpress/client": "workspace:*",
+    "@botpress/sdk": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^18.19.67",
-    "typescript": "^5.6.3"
+    "@botpress/cli": "workspace:*"
   }
 }
