--- a/integrations/bigcommerce-sync/package.json
+++ b/integrations/bigcommerce-sync/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*"
