--- a/plugins/hitl/package.json
+++ b/plugins/hitl/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "dependencies": {
     "@botpress/client": "workspace:*",
-    "@botpress/sdk": "workspace:*"
+    "@botpress/sdk": "workspace:*",
+    "browser-or-node": "^2.1.1"
   },
   "devDependencies": {
     "@botpress/cli": "workspace:*",
