feat(integrations/sunco): Use interfaces for proactive user/conversation and update avatar and name

--- a/integrations/sunco/package.json
+++ b/integrations/sunco/package.json
@@ -20,6 +20,8 @@
     "@sentry/cli": "^2.39.1"
   },
   "bpDependencies": {
-    "typing-indicator": "../../interfaces/typing-indicator"
+    "typing-indicator": "../../interfaces/typing-indicator",
+    "proactiveUser": "../../interfaces/proactive-user",
+    "proactiveConversation": "../../interfaces/proactive-conversation"
   }
 }
