chore(notion): add sentry

--- a/integrations/notion/package.json
+++ b/integrations/notion/package.json
@@ -15,7 +15,8 @@
     "notion-to-md": "^4.0.0-alpha.4"
   },
   "devDependencies": {
-    "@botpress/cli": "workspace:*"
+    "@botpress/cli": "workspace:*",
+    "@sentry/cli": "^2.39.1"
   },
   "bpDependencies": {
     "files-readonly": "../../interfaces/files-readonly"
