chore(freshchat): update hitl

--- a/integrations/freshchat/package.json
+++ b/integrations/freshchat/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@botpress/client": "workspace:*",
+    "@botpress/common": "workspace:*",
     "@botpress/sdk": "workspace:*",
     "@botpress/sdk-addons": "workspace:*",
     "axios": "^1.4.0"
