--- a/schemas/knowledge.json
+++ b/schemas/knowledge.json
@@ -11,8 +11,7 @@
     "schema": {
       "type": "object",
       "properties": {},
-      "additionalProperties": false,
-      "x-zui": {}
+      "additionalProperties": false
     }
   }
 }
