feat(integrations/whatsapp): Implement proactive-user, remove deprecated proactive conversation creation and refactor
- Renamed some config and state params and refined their schema
- Merged action `startConversation` with action required for implementing proactive-conversation

--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -24,6 +24,7 @@
     "@sentry/cli": "^2.39.1"
   },
   "bpDependencies": {
-    "typing-indicator": "../../interfaces/typing-indicator"
+    "typing-indicator": "../../interfaces/typing-indicator",
+    "proactive-conversation": "../../interfaces/proactive-conversation"
   }
 }
